--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@
 
 # Generated files
 .idea/**/contentModel.xml
+istio-ingressgw/certificate-generator/1_root/
+istio-ingressgw/certificate-generator/2_intermediate
+istio-ingressgw/certificate-generator/3_application
+istio-ingressgw/certificate-generator/4_client
+*.tgz
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
