--- a/coinbase-monitor/src/main/resources/application.properties
+++ b/coinbase-monitor/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 kafka.bootstrapAddress=127.0.0.1:31000
 websocket.configuration=wss://ws-feed.pro.coinbase.com
+
+spring.jpa.show-sql=true
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
