--- a/coinbase-monitor/charts/coinbase-monitor/values.yaml
+++ b/coinbase-monitor/charts/coinbase-monitor/values.yaml
@@ -15,6 +15,9 @@ global:
     zookeeper:
       hostname: zookeeper
       port: 2181
+    mongo:
+      hostname: mongo
+      port: 27017
 
 replicaCount: 1
 images:
@@ -59,5 +62,7 @@ updateStrategy:
     maxSurge: 0
 
 coinbaseSocket: wss://ws-feed.pro.coinbase.com
+mongo:
+  databaseName: test
 
 nameOverride:
