--- a/coinbase-monitor/src/main/resources/application.properties
+++ b/coinbase-monitor/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-kafka.bootstrapAddress=127.0.0.1:31000
+kafka.bootstrapAddress=127.0.0.1:31001
 websocket.configuration=wss://ws-feed.pro.coinbase.com
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.ogm.datastore.create_database=true
 spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=test
+spring.data.mongodb.port=31003
+spring.data.mongodb.username=root
+spring.data.mongodb.password=password
+spring.data.mongodb.database=coinbase
+spring.data.mongodb.authentication-database=admin
