--- a/mongo/charts/mongo/templates/service.yaml
+++ b/mongo/charts/mongo/templates/service.yaml
@@ -13,3 +13,6 @@ spec:
     - port: 27017
       name: mongo-client
       protocol: TCP
+    - port: 8081
+      name: mongo-express
+      protocol: TCP
