--- a/mongo/charts/mongo/templates/deployment.yaml
+++ b/mongo/charts/mongo/templates/deployment.yaml
@@ -28,9 +28,25 @@ spec:
             claimName: {{ template "mongo.name" . }}
       containers:
         - name: mongodb-container
-          image: "de13/mongo-myapp"
+          image: mongo
           volumeMounts:
             - name: {{ template "mongo.name" . }}
               mountPath: /var/lib/mongo
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value: "root"
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value: "password"
           ports:
             - containerPort: 27017
+        - name: mongo-express
+          image: mongo-express
+          env:
+            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
+              value: "root"
+            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
+              value: "password"
+            - name: ME_CONFIG_MONGODB_SERVER
+              value: "localhost"
+          ports:
+            - containerPort: 8081
