--- a/coinbase-client/charts/coinbase-client/templates/configmap.yaml
+++ b/coinbase-client/charts/coinbase-client/templates/configmap.yaml
@@ -22,7 +22,11 @@ data:
         health:
           probes:
             enabled: true
-  jvm.java_opts: "-Xmx{{ .Values.jvm.maxheapmemory }} -Xms{{ .Values.jvm.startheapmemory }} -Dlogging.config=/etc/config/log4j.xml"
+    kafka:
+      bootstrapAddress: {{ .Values.global.services.kafka.hostname }}:{{ .Values.global.services.kafka.port }}
+      groupId: {{ .Values.kafka.groupId }}
+      inTopicName: {{ .Values.kafka.inTopicName }}
+  jvm.java_opts: "-Xmx{{ .Values.jvm.maxheapmemory }} -Xms{{ .Values.jvm.startheapmemory }} -Dlogging.config=/etc/config/log4j.xml -Dspring.config.location=/etc/config/application.yaml"
   log4j.xml: |-
     <?xml version="1.0" encoding="UTF-8"?>
     <Configuration status="{{ .Values.app.logging}}">
