--- a/coinbase-client/charts/coinbase-client/values.yaml
+++ b/coinbase-client/charts/coinbase-client/values.yaml
@@ -8,6 +8,16 @@ global:
     sidecar:
       inject: true
   timezone: "UTC"
+  services:
+    kafka:
+      hostname: message-bus-kafka
+      port: 9092
+    zookeeper:
+      hostname: zookeeper
+      port: 2181
+    mongo:
+      hostname: mongo
+      port: 27017
 
 replicaCount: 1
 images:
@@ -50,5 +60,9 @@ updateStrategy:
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 0
+
+kafka:
+  groupId: "1"
+  inTopicName: "coinbase"
 
 nameOverride:
