--- a/coinbase-client/src/main/resources/application.properties
+++ b/coinbase-client/src/main/resources/application.properties
@@ -3,3 +3,7 @@ management.health.readinessstate.enabled=true
 management.endpoint.health.probes.enabled=true
 
 websocket.configuration.sourceuri=wss://ws-feed.pro.coinbase.com
+
+kafka.bootstrapAddress=localhost:31001
+kafka.groupId=1
+kafka.inTopicName=coinbase
