--- a/coinbase-client/pom.xml
+++ b/coinbase-client/pom.xml
@@ -53,6 +53,11 @@
 
         <dependency>
             <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
